--- a/shortener/templates/settings.html
+++ b/shortener/templates/settings.html
@@ -1,8 +1,8 @@
 {#
 #
-# Shortner for Craft Settings Template
+# Shortener for Craft Settings Template
 # Author: Aaron Berkowitz (@asberk)
-# https://github.com/aberkie/craft-shortner
+# https://github.com/aberkie/craft-shortener
 #
 #}
 
