--- a/shortener/templates/settings.html
+++ b/shortener/templates/settings.html
@@ -37,3 +37,14 @@
 	value: settings['domain'],
 	options: opts
 })}}
+
+{{textfield({
+	id: 'customDomain',
+	name: 'customDomain',
+	value: settings['customDomain'],
+	label: 'Custom short domain associated with your account. This will override the Domain option above.',
+	size: 30
+})}}
+
+
+<p>Be sure to <strong>clear your site's cache</strong> after making any changes to these settings!</p>
